--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="/dist/vendor.css">
   <link rel="stylesheet" href="/dist/index.css">
 
+
   <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style/base.css">
+  <link rel="stylesheet" href="style/login.css">
+
   <script type="text/javascript" src="js/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 
